--- a/days/src/main/resources/templates/shift.html
+++ b/days/src/main/resources/templates/shift.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <form method="GET" action="#" th:action="@{/}">
-            <button type="submit" >戻る</button>
+            <button type="submit" >ホームへ戻る</button>
+        </form>
+        <form method="GET" action="#" th:action="@{/list}">
+            <button type="submit" >カレンダー</button>
         </form>
         <table border="1">
             <tr>
