--- a/days/src/main/resources/templates/calclate.html
+++ b/days/src/main/resources/templates/calclate.html
@@ -8,49 +8,93 @@
         span{
             color: red ;
         }
-        .picture-box{
-            margin-top: 50px ;
-            display: flex;
+        .transition-flex{
+            display: flex ;
+        }
+        .transition-flex button{
+            height : 50px ;
+            margin-right: 10px; 
+        }
+        .text-picture-flex{
+            display: flex ;
+            justify-content:flex-start;
+        }
+        .picture-all{
+            margin-left: 100px;
         }
         .picture{
-            border: solid 1px black;
-            margin-left: 30px;
-            flex-wrap: wrap;
+            border: solid 4px darkblue ; 
+            margin: 5px;
+        }
+        .text-all{
+            width: 40%;
+        }
+        .text-box{
+            margin-top: 20px;
+            border: solid black 1px;
+            height : auto ;
+        }
+        .text-box input{
+            margin: 0px 0px 20px 10px;
+        }
+        .error{
+            color: red;
+        }
+        .calc-button{
+            margin: 0px 230px;
+            height : 70px ;
+            width: 120px ;
+            font-size: 20px;
         }
     </style>
 </head>
 <body>
-    <form method="GET" action="#" th:action="@{/}">
-        <button type="submit" >ホームに戻る</button>
-    </form>
-    <form method="GET" action="#" th:action="@{/list}">
-        <button type="submit" >カレンダーに戻る</button>
-    </form>
-    <form method="POST" action="#" th:object="${updateCode}">
-       
-        <!--p>一斉休暇日を入力してください</!--p>
-         <select-- multiple="multiple" size="8">
-                        <option value="">---</option>
-                        <option th:each="days : ${date}" th:value="${days.value}" th:text="${days.value}" th:selected="${days.value} == *{selectedItem}">multiSelect</option>
-                    </select-->
-        <p>月始めの出勤開始日を入力してください<br>
-        <span>※一斉休暇は除く</span></p>
-        <input type="number" max="31" min="1" value="1" th:field="${updateCode.inputDate}">
-        <p>「シフト1」出勤開始日から5日間の数字を入力してください<br>
-            例：[1,1,ヤ,3,3]の場合、「11433」<br>
-        <span>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</span></p>
-        <input type="text" th:field="${updateCode.inputCode}">
-        <input type="submit" value="計算">
-    </form>
-    <div class="picture-box">
-        <div class="picture">
-            <p>入力値例</p>
-            <img src="https://user-images.githubusercontent.com/70437690/102171665-71ebbf00-3eda-11eb-8166-8a59a38f12f3.jpg" width="400" height="150">
-        </div>
-        <div class="picture">
-            <p>一斉休暇日開始の場合</p>
-            <img src="https://user-images.githubusercontent.com/70437690/102171694-83cd6200-3eda-11eb-88c2-786e6dbb0be5.jpg" width="400" height="175">
-        </div>
+
+    <div class="transition-flex">
+        <form method="GET" action="#" th:action="@{/}">
+            <button type="submit" >ホームに戻る</button>
+        </form>
+        <form method="GET" action="#" th:action="@{/list}">
+            <button type="submit" >カレンダーに戻る</button>
+        </form>
     </div>
+    <form method="POST" action="#" th:object="${updateCode}">
+        <div class="text-picture-flex">
+            <div class="text-all">
+                                        <!--p>一斉休暇日を入力してください</!--p>
+                                        <select-- multiple="multiple" size="8">
+                                            <option value="">---</option>
+                                            <option th:each="days : ${date}" th:value="${days.value}" th:text="${days.value}" th:selected="${days.value} == *{selectedItem}">multiSelect</option>
+                                        </select-->
+                <div class="text-box">
+                        <p>月始めの出勤開始日を入力してください<br>
+                        <span>※一斉休暇は除く</span></p>
+                        <input type="text" value="" name="inputDate" th:field="${updateCode.inputDate}">
+                        <p th:errors="${updateCode.inputDate}" class="error" >--日付が存在しません--</p>
+                </div>
+                <div class="text-box">
+                            <p>「シフト1」出勤開始日から5日間の数字を入力してください<br>
+                            例：[1,1,ヤ,3,3]の場合、「11433」<br>
+                            <span>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</span></p>
+                            <input type="text" th:field="${updateCode.inputCode}">
+                            <p th:errors="${updateCode.inputCode}" class="error" >--5桁の数字をを正しく入力してください--</p>
+                </div>
+                        
+            </div>
+            <div class="picture-all">
+                <div class="picture-box">
+                    <div class="picture">
+                                <p>入力値例</p>
+                                <img src="https://user-images.githubusercontent.com/70437690/102171665-71ebbf00-3eda-11eb-8166-8a59a38f12f3.jpg" width="400" height="150">
+                    </div>
+                    <div class="picture">
+                                <p>一斉休暇日開始の場合</p>
+                                <img src="https://user-images.githubusercontent.com/70437690/102171694-83cd6200-3eda-11eb-88c2-786e6dbb0be5.jpg" width="400" height="175">
+                    </div>
+                </div>
+            </div>
+        </div>
+                    <input class="calc-button" type="submit" value="計算実行">
+    </form>
 </body>
 </html>
