--- a/days/src/main/resources/templates/shift.html
+++ b/days/src/main/resources/templates/shift.html
@@ -9,7 +9,7 @@
         <form method="GET" action="#" th:action="@{/}">
             <button type="submit" >ホームへ戻る</button>
         </form>
-        <form method="GET" action="#" th:action="@{/list}">
+        <form method="GET" action="#" th:action="@{/calendar}">
             <button type="submit" >カレンダー</button>
         </form>
         <table border="1">
