--- a/days/src/main/resources/templates/start.html
+++ b/days/src/main/resources/templates/start.html
@@ -41,7 +41,7 @@
         <form method="GET" action="#" th:action="@{/shift}">
             <button type="submit" >シフト表</button>
         </form>
-        <form method="GET" action="#" th:action="@{/list}">
+        <form method="GET" action="#" th:action="@{/calendar}">
             <button type="submit" >勤怠カレンダー</button>
         </form>
     </div>
