--- a/days/src/main/resources/templates/calclate.html
+++ b/days/src/main/resources/templates/calclate.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自動計算</title>
     <style>
-        span{
-            color: red ;
-        }
         .transition-flex{
             display: flex ;
         }
@@ -35,7 +32,18 @@
             height : auto ;
         }
         .text-box input{
-            margin: 0px 0px 20px 10px;
+            margin: 10px 0px 10px 10px;
+        }
+        .text-box h4{
+            margin: 5px;
+        }
+        .text-box h5{
+            margin: 5px;
+        }
+        .text-box p{
+            color: darkblue;
+            margin: 0px;
+            font-size: 14px;
         }
         .error{
             color: red;
@@ -67,17 +75,17 @@
                                             <option th:each="days : ${date}" th:value="${days.value}" th:text="${days.value}" th:selected="${days.value} == *{selectedItem}">multiSelect</option>
                                         </select-->
                 <div class="text-box">
-                        <p>月始めの出勤開始日を入力してください<br>
-                        <span>※一斉休暇は除く</span></p>
+                    <h4>月始めの出勤開始日を入力してください</h4>
+                        <p>※一斉休暇は除く</p>
                         <input type="text" name="inputDate">
-                        <p th:errors="${updateCode.inputDate}" class="error" >--日付が存在しません--</p>
+                        <h5 th:errors="${updateCode.inputDate}" class="error" >--日付が存在しません--</h5>
                 </div>
                 <div class="text-box">
-                            <p>「シフト1」出勤開始日から5日間の数字を入力してください<br>
-                            例：[1,1,ヤ,3,3]の場合、「11433」<br>
-                            <span>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</span></p>
+                            <h4>「シフト1」出勤開始日から5日間の数字を入力してください</h4>
+                            <p>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</p>
+                            <p>例：[1,1,ヤ,3,3]の場合、「11433」</p>
                             <input type="text" name="inputCode">
-                            <p th:errors="${updateCode.inputCode}" class="error" >--5桁の数字をを正しく入力してください--</p>
+                            <h5 th:errors="${updateCode.inputCode}" class="error" >--5桁の数字をを正しく入力してください--</h5>
                 </div>
                         
             </div>
